--- a/metaData/workingBrain_metaData.Rmd
+++ b/metaData/workingBrain_metaData.Rmd
@@ -17,7 +17,7 @@ library(readxl); library(tidyverse); library(dplyr); library(naniar); library(gg
 library(data.tree); library(circlepackeR); library(igraph); library(ggraph);library(networkD3); library(htmlwidgets);
 library(collapsibleTree); library(reticulate);
 library(ggdag); library(dagitty)
- 
+library(viridis)
 ```
 
 
@@ -184,7 +184,7 @@ I thought this would be quite useful for visualising (and hopefully making sense
 metaData_filtered$pathString <- file.path("world", metaData_filtered$MetaCat, metaData_filtered$Category)
 metaData_filtered$value <- sample(seq(1:nrow(metaData_filtered)), 1)
 
-cats_p <- circlepackeR(as.Node(metaData_filtered), size = "value", color_min = "rgb(250, 200, 150)", color_max = "rgb(120, 50, 0)")
+cats_p <- circlepackeR(as.Node(metaData_filtered), size = "value", color_min = "hsl(110, 98%, 37%)", color_max = "hsl(120, 53%, 5%))")
 
 cats_p
 
@@ -198,15 +198,16 @@ cats_p
 Note: had to use `FieldID` as opposed to `Field`(i.e. field name) to help with visualisation.
 ```{r circlePack_fields}
 metaData_filtered$pathString <- file.path("world", metaData_filtered$MetaCat, metaData_filtered$Category, metaData_filtered$FieldID)
-metaData_filtered$value <- sample(seq(1:nrow(metaData_filtered)), 1)
+metaData_filtered$value <- sample(seq(1:480), 480)
 
-fields_p <- circlepackeR(as.Node(metaData_filtered), size = "value", color_min = "rgb(250, 200, 150)", color_max = "rgb(120, 50, 0)")
+fields_p <- circlepackeR(as.Node(metaData_filtered), size = "value",color_min = "hsl(110, 98%, 37%)", color_max = "hsl(120, 53%, 5%))")
 
 fields_p
 
 # save the widget
 # saveWidget(fields_p, file=paste("circlePack_fields.html"))
 ```
+
 
 ```{r fields}
 
@@ -244,14 +245,11 @@ This project *aims* to characterize the neurophysiological processes through whi
 
 Progress against these objectives will help develop a holistic insight into why our wellbeing is affected by modern work patterns and other occupational factors. 
 
-Therefore, our main question is what occupational factors affect neurophysiology and how? In the current case (i.e. UKBB dataset), our occupational factors will be under the metaCat *Employment*, our neurohysiology measures are *C-Reactive Protein (CRP)* and brain imaging (*task + resting-state MRI*). Directly investigating the effect of occupational factors on neurophysiology is possible, but in and of itself it will not be particularly useful, because:
+Therefore, our main question is what occupational factors affect neurophysiology and how? In the current case (i.e. UKBB dataset), our occupational factors will be under the metaCat *Employment*, our neurohysiology measures are *C-Reactive Protein (CRP)* and brain imaging (*task + resting-state MRI*). 
 
+In order to determine how particular work patterns are associated with neural markers, immune function, and cognition, we need to first understand how numerous non-imaging/-physiological variables inter-relate in our Biobank dataset. This includes employment, sociodemographic, lifestyle, and health-related information. The complete list of data fields requested from the Biobank for this project can be found at http://tiny.cc/UKBBMetaData_62188 (N.B.:“Participants” attribute refers to total participants in the cohort with information in the selected “Field”, not the number of participants in the dataset linked to the current project).  
 
-- Different levels of abstraction/analysis, i.e. quite far removed from one another -> a miriad of intermidiary factors.
-- It wouldn't tell us much re a viable biological mechanism for any potential effect.
-- Interpretation would be difficult.
-
-We therefore propose a mechanism based on extant literature (see details here: #link to pre-registration#), which will guide our investigation Namely, we propose that occupational factors affect neurophysiology, cognition and affect through altering the body's inflammatory responses. Moreover, we suggest that this effect is mediated, in part, by interoception.  
+Therefore, prior to analysing the imaging and physiological data, we will undertake a comprehensive investigation of how employment variables (e.g. ‘Length of working week for main job’; Biobank Field ID: 767) relate to sociodemographic, lifestyle, and health-related information, in our dataset of n = 35, 501 individuals. To do so, we plan to use multivariate analysis techniques, incorporating machine learning methods, potentially applying a Canonical Correlational Analysis (CCA) approach.
 
 ### Proposed strategies
 
@@ -371,16 +369,14 @@ Help with implementation [here](https://rdrr.io/cran/ggdag/), [here](https://cra
 workingBrain_brainDag <- dagify(
   lfstyle ~ sdems + work,           
   work ~ sdems,      
-  sleep ~ work + lfstyle,
-  phys ~ work + sleep + lfstyle,
-  brain ~ cog + phys + sleep,
-  cog ~ phys  + work + sleep,
+  phys ~ work + lfstyle,
+  brain ~ cog + phys,
+  cog ~ phys  + work,
   part ~ work + sdems + lfstyle,
   
   labels = c("work" = "Occupational\n Factors",
              "lfstyle" = "Lifestyle &\n Environment",
              "sdems" = "Sociodemographics",
-             "sleep" = "Sleep",
              "brain" = "Brain",
              "phys" = "Physiology",
              "cog" = "Cognition &\n Affect",
@@ -401,7 +397,6 @@ ggdag(workingBrain_brainDag, stylized = TRUE) +
 * "work" = "Occupational Factors / Employment" == **exposure**,
 * "lfstyle" = "Lifestyle and Environment",
 * "sdems" = "Sociodemographics",
-* "sleep" = "Sleep",
 * "brain" = "Brain Imaging (tf/rs-fMRI)" == **outcome**,
 * "phys" = "Physiology",
 * "cog" = "Cognition &\n Affect",
@@ -413,15 +408,13 @@ ggdag(workingBrain_brainDag, stylized = TRUE) +
 workingBrain_brainDagPresent <- dagify(
   lfstyle ~ sdems + work,           
   work ~ sdems,      
-  sleep ~ work + lfstyle,
-  phys ~ work + sleep + lfstyle,
-  brain ~ cog + phys + sleep,
-  cog ~ phys  + work + sleep,
+  phys ~ work + lfstyle,
+  brain ~ cog + phys,
+  cog ~ phys  + work,
   
   labels = c("work" = "Occupational\n Factors",
              "lfstyle" = "Lifestyle &\n Environment",
              "sdems" = "Sociodemographics",
-             "sleep" = "Sleep",
              "brain" = "Brain",
              "phys" = "Physiology",
              "cog" = "Cognition &\n Affect"),
@@ -448,7 +441,7 @@ Conditional independencies in the DAG:
 impliedConditionalIndependencies(workingBrain_brainDag)
 ```
 
-This shows that (if our DAG is correct) our *Brain* measures will be independent of *Work* if we condition on *Cognition*, *Physiological* and *Sleep* features (i.e. **bran _||_ work | cog, phys, slep**). This is because in the current case we're assuming that the effect of *Work* on the *Brain* is carried/mediated by (and only by/comprehensively) **cog**, **phys** and **sleep.** If we include a path from **work** to **brain**, we could condition on **cog**, **phys** and **slep** to see if there's any variation not carried by these two. The "left-over" variation could not be directly attributable to **work** necessarily however, it might be one or several variables that are unaccounted for in our graph/models.
+This shows that (if our DAG is correct) our *Brain* measures will be independent of *Work* if we condition on *Cognition*,and *Physiology* features (i.e. **bran _||_ work | cog, phys, slep**). This is because in the current case we're assuming that the effect of *Work* on the *Brain* is carried/mediated by (and only by/comprehensively) **cog**, **phys**. If we include a path from **work** to **brain**, we could condition on **cog**, **phys** and **slep** to see if there's any variation not carried by these two. The "left-over" variation could not be directly attributable to **work** necessarily however, it might be one or several variables that are unaccounted for in our graph/models.
  
 
 I am having difficulties vizualizing all potential paths when knitting, so will have to skip in published notebook - code provided at https://github.com/factitious/raeBiobank_workingBrain/blob/master/metaData/workingBrain_metaData.Rmd).
@@ -481,14 +474,12 @@ Also, we need a way to decide on how to condition on the lifestyle features (e.g
 workingBrain_physDag <- dagify(
   lfstyle ~ work + sdems,             
   work ~ sdems,      
-  sleep ~ work + lfstyle,
-  phys ~ work + sleep + lfstyle,
+  phys ~ work + lfstyle,
   part ~ work + sdems + lfstyle,
   
   labels = c("work" = "Occupational\n Factors",
              "lfstyle" = "Lifestyle &\n Environment",
              "sdems" = "Sociodemographics",
-             "sleep" = "Sleep",
              "phys" = "Physiology",
              "cog" = "Cognition &\n Affect",
              "part" = "Participation"),
@@ -520,18 +511,16 @@ ggdag_adjustment_set(workingBrain_physDag, text = T, shadow = TRUE) +
 
 workingBrain_healthDag <- dagify(
   lfstyle ~ work + sdems,             
-  work ~ sdems,      
-  sleep ~ work + lfstyle,
-  phys ~ work + sleep + lfstyle,
-  brain ~ cog + phys + sleep,
-  cog ~ phys + work + sleep,
-  health ~ brain + cog + sleep + phys,
+  work ~ sdems,     
+  phys ~ work + lfstyle,
+  brain ~ cog + phys + lfstyle,
+  cog ~ phys + work + lfstyle,
+  health ~ brain + cog + phys,
   #part ~ work + sdems + lfstyle + health,
   
   labels = c("work" = "Occupational\n Factors",
              "lfstyle" = "Lifestyle &\n Environment",
              "sdems" = "Sociodemographics",
-             "sleep" = "Sleep",
              "brain" = "Brain",
              "phys" = "Physiology",
              "cog" = "Cognition &\n Affect",
@@ -546,7 +535,7 @@ workingBrain_healthDag <- dagify(
   tidy_dagitty(layout = "nicely", seed = 150)
 
 
-ggdag(workingBrain_healthDag, stylized = TRUE) +
+ggdag(workingBrain_healthDag, stylized = TRUE, use_labels = "label", text = F) +
   theme_dag_blank()
 
 ```
@@ -559,17 +548,15 @@ ggdag(workingBrain_healthDag, stylized = TRUE) +
 workingBrain_healthDagDep <- dagify(
   lfstyle ~ work + sdems,             
   work ~ sdems,      
-  sleep ~ work + lfstyle,
-  phys ~ work + sleep + lfstyle,
-  brain ~ cog + phys + sleep,
-  cog ~ phys + work + sleep,
-  health ~ brain + cog + sleep + phys,
+  phys ~ work + lfstyle,
+  brain ~ cog + phys,
+  cog ~ phys + work,
+  health ~ brain + cog + phys,
   part ~ work + sdems + lfstyle + health,
   
   labels = c("work" = "Occupational\n Factors",
              "lfstyle" = "Lifestyle &\n Environment",
              "sdems" = "Sociodemographics",
-             "sleep" = "Sleep",
              "brain" = "Brain",
              "phys" = "Physiology",
              "cog" = "Cognition &\n Affect",
@@ -588,8 +575,7 @@ impliedConditionalIndependencies(workingBrain_healthDagDep)
 
 
 ```{r}
-ggdag_adjustment_set(workingBrain_healthDag, text = T, shadow = TRUE, stylized = TRUE) +
-  theme_dag_blank()
+ggdag_adjustment_set(workingBrain_healthDag, text = F, shadow = TRUE, use_labels = "label", stylized = TRUE) + theme_dag_blank()
 ```
 
 
@@ -669,7 +655,6 @@ metaData_filtered %>%
   arrange(Category)
 ```
 
-NB: *Sleep* actually falls under "Lifestyle and environment" in this dataset, but we don't actually want to use it like that (i.e. "Sleep" is separate, see DAGs)
 
 
 
